# ipset-dns-rs

./: Cargo.toml  README.md  ipset_dns_config.toml
src/: cli.rs  errors.rs  main.rs
src/ipset/: mod.rs  types.rs
