[package]
name = "ipset-dns-rs"
description = "Lightweight DNS forwarding server that adds all resolved IPs to a given netfilter ipset"
version = "0.1.0"
authors = ["Matthias Schorsch <matthias.schorsch@gmx.de>"]
repository = "https://github.com/mschorsch/ipset-dns-rs.git"
license = "GPLv2"
readme = "README.md"
documentation = "https://github.com/mschorsch/ipset-dns-rs"
edition = "2018"

[dependencies]
crslmnl = "0.2.1"
failure = "0.1.3"
failure_derive = "0.1.3"
clap = "2.32.0"
dns-parser = "0.8.0"
libc = "0.2.45"
log = "0.4.6"
env_logger = "0.6.0"
net2 = "0.2.33"